--- a/app/css/app.less
+++ b/app/css/app.less
@@ -34,6 +34,7 @@
 @import 'directives/directedGraph.less';
 @import 'directives/filterBuilder.less';
 @import 'directives/filterState.less';
+@import 'directives/gantt-chart.less';
 @import 'directives/linechart.less';
 @import 'directives/map.less';
 @import 'directives/queryResultsTable.less';
