--- a/app/partials/directives/gantt-chart.html
+++ b/app/partials/directives/gantt-chart.html
@@ -1,3 +1,39 @@
+<div class="header-container" ng-hide="hideHeader">
+    <options-menu parent-element="element">
+        <div class="form-group" ng-show="!(hideAdvancedOptions)">
+            <label>Database</label>
+            <select class="form-control" ng-model="options.database" ng-options="database.prettyName for database in databases" ng-required="true" ng-disabled="(databases.length < 2)" ng-change="updateTables()">
+            </select>
+        </div>
+        <div class="form-group" ng-show="!(hideAdvancedOptions)">
+            <label>Table</label>
+            <select class="form-control" ng-model="options.table" ng-options="table.prettyName for table in tables" ng-required="true" ng-disabled="(tables.length < 2)" ng-change="updateFields()">
+            </select>
+        </div>
+        <div class="form-group" ng-show="!(hideAdvancedOptions)">
+            <label>Group Field 1</label>
+            <select class="form-control" ng-model="options.groupField[0]" ng-options="field for field in fields" ng-disabled="!(fields.length > 0)">
+            </select>
+        </div>
+        <div class="form-group" ng-show="!(hideAdvancedOptions)">
+            <label>Group Field 2</label>
+            <select class="form-control" ng-model="options.groupField[1]" ng-options="field for field in fields" ng-disabled="!(fields.length > 0) || !options.groupField[0]">
+            </select>
+        </div>
+        <div class="form-group" ng-show="!(hideAdvancedOptions)">
+            <label>Group Field 3</label>
+            <select class="form-control" ng-model="options.groupField[2]" ng-options="field for field in fields" ng-disabled="!(fields.length > 0) || !options.groupField[1]">
+            </select>
+        </div>
+        <div class="form-group" ng-show="!(hideAdvancedOptions)">
+            <label>Group Field 4</label>
+            <select class="form-control" ng-model="options.groupField[3]" ng-options="field for field in fields" ng-disabled="!(fields.length > 0) || !options.groupField[2]">
+            </select>
+        </div>
+    </options-menu>
+</div>
 <div class="gantt-chart" gantt data="data">
     <gantt-tooltips></gantt-tooltips>
+    <gantt-tree enabled="options.groupField.length > 0"></gantt-tree>
+    <gantt-groups></gantt-groups>
 </div>
