--- a/app/partials/directives/tagCloud.html
+++ b/app/partials/directives/tagCloud.html
@@ -31,6 +31,13 @@
             </div>
             <div class="clearfix"></div>
         </div>
+        <div class="form-group">
+            <div class="input-group">
+                <button type="button" class="btn btn-default export" ng-click="requestExport()">
+                    Export to File
+                </button>
+            </div>
+        </div>
     </options-menu>
 </div>
 
