NEON-1575 make filters more obvious

--- a/app/css/style.less
+++ b/app/css/style.less
@@ -361,6 +361,9 @@ label{
     font-weight: bold;
     color: @main-text-color;
     background-color: @button-color;
+    border-style: solid;
+    border-width: thin;
+    border-color: @button-border-color;
     border-radius: 4px;
     margin-left: 5px;
     margin-top: 5px;
@@ -368,7 +371,7 @@ label{
 
     .filter-label {
         float: left;
-        font-size: 10px;
+        font-size: 12px;
         padding: 8px;
         max-width: 80px;
         overflow: hidden;
