--- a/app/css/variables.less
+++ b/app/css/variables.less
@@ -41,9 +41,8 @@
 @border: 1px solid @border-color;
 @shadow-border: 1px solid @shadow;
 
-
-@button-color: #DDDDDD;
-
+@button-border-color: #787878;
+@button-color: #EEEEEE;
 
 @chart-text-color: #444444;
 @chart-axis-color: #CCCCCC;
