NEON-1572 Add point on map on table row selection

--- a/app/css/directives/queryResultsTable.less
+++ b/app/css/directives/queryResultsTable.less
@@ -221,6 +221,14 @@
     }
 }
 
+.query-results-grid.row-selected {
+    .slick-row{
+        &.active {
+            background: @accent-dulled;
+        }
+    }
+}
+
 .slick-sort-indicator {
     float: none;
 }
