NEON-1574 Make close button configurable

--- a/app/css/directives/visualizationWidget.less
+++ b/app/css/directives/visualizationWidget.less
@@ -39,6 +39,12 @@
             .btn {
                 opacity: 1;
             }
+
+            .btn.center {
+                margin-left: auto;
+                margin-right: auto;
+                display: block;
+            }
         }
     }
 
