--- a/app/partials/directives/countby.html
+++ b/app/partials/directives/countby.html
@@ -1,7 +1,7 @@
 <div class="header-container" ng-show="!(hideHeader)">
     <span class="header-text pull-left">{{options.table.prettyName}}</span>
 
-    <options-menu parent-element="element" ng-show="!(hideAdvancedOptions)">
+    <options-menu parent-element="element" export-function="makeCountByExportObject" ng-show="!(hideAdvancedOptions)">
         <div class="form-group" ng-show="(hideAdvancedOptions)">
             <label>No Options Available</label>
         </div>
@@ -33,14 +33,6 @@
             <label>Value Field (Y Axis)</label>
             <select class="form-control" ng-model="options.aggregationField" ng-required="true" ng-disabled="!(fields.length > 0)" ng-options="field for field in fields" ng-change="handleChangeAggregationField()">
             </select>
-        </div>
-
-        <div class="form-group">
-            <div class="input-group">
-                <button type="button" class="btn btn-default export" ng-click="requestExport()">
-                    Export to File
-                </button>
-            </div>
         </div>
     </options-menu>
 </div>
