--- a/app/partials/directives/map.html
+++ b/app/partials/directives/map.html
@@ -3,7 +3,7 @@
 </div>
 
 <div class="header-container menu-container">
-    <options-menu parent-element="element" button-text="optionsMenuButtonText" show-button-text="showOptionsMenuButtonText">
+    <options-menu parent-element="element" export-function="makeMapExportObject" button-text="optionsMenuButtonText" show-button-text="showOptionsMenuButtonText">
         <div class="form-group" ng-repeat="layer in options.layers">
             <label>Filtering on {{layer.name}}</label>
             <div class="btn-group">
@@ -80,14 +80,6 @@
                 </select>
             </div>
         </div> -->
-        
-        <div class="form-group">
-            <div class="input-group">
-                <button type="button" class="btn btn-default export" ng-click="requestExport()">
-                    Export to File
-                </button>
-            </div>
-        </div>
     </options-menu>
 </div>
 
