--- a/app/partials/directives/optionsMenu.html
+++ b/app/partials/directives/optionsMenu.html
@@ -6,7 +6,15 @@
     </a>
     <div class="popover bottom">
         <div class="arrow"></div>
-        <div class="popover-content" ng-transclude>
+        <div class="popover-content">
+            <div ng-transclude></div>
+            <div class="form-group" ng-show="exportFunction !== undefined">
+                <div class="input-group">
+                    <button type="button" class="btn btn-default export" ng-click="requestExport()">
+                        Export to File
+                    </button>
+                </div>
+            </div>
         </div>
     </div>
 </div>
