--- a/app/partials/directives/timelineSelector.html
+++ b/app/partials/directives/timelineSelector.html
@@ -1,7 +1,7 @@
 <div class="header-container" ng-show="!(hideHeader)">
     <span class="header-text pull-left">{{options.table.prettyName}}</span>
 
-    <options-menu parent-element="element">
+    <options-menu parent-element="element" export-function="makeTimelineSelectorExportObject">
         <div class="form-group" ng-show="!(hideAdvancedOptions)">
             <label>Database</label>
             <select class="form-control" ng-model="options.database" ng-options="database.prettyName for database in databases" ng-required="true" ng-disabled="(databases.length < 2)" ng-change="updateTables()">
@@ -49,13 +49,6 @@
               </label>
             </div>
             <div class="clearfix"></div>
-        </div>
-        <div class="form-group">
-          <div class="input-group">
-            <button type="button" class="btn btn-default export" ng-click="requestExport()">
-              Export to File
-            </button>
-          </div>
         </div>
     </options-menu>
 </div>
