--- a/app/partials/directives/map.html
+++ b/app/partials/directives/map.html
@@ -1,13 +1,15 @@
 <div class="header-container menu-container">
     <options-menu parent-element="element" button-text="optionsMenuButtonText" show-button-text="showOptionsMenuButtonText">
-        <div class="form-group" ng-repeat="layer in options.layers">
-            <label>Filtering on {{layer.name}}</label>
+        <div class="form-group layer-options" ng-repeat="layer in options.layers">
+            <label>{{layer.name}}</label>
             <div class="btn-group">
-                <label class="btn btn-default" ng-class="{true: 'active', false: ''}[layer.active === true]">
-                    <input type="radio" style="display:none" ng-model="layer.active" ng-value="true" ng-change="updateFilteringOnLayer(layer)"> Yes
+                <label class="btn btn-default" ng-class="{true: 'active', false: ''}[layer.visible === true]">
+                    <input type="checkbox" style="display:none" ng-model="layer.visible" ng-change="updateLayerVisibility(layer)">
+                    <span class="glyphicon glyphicon-eye-open"></span> Visible
                 </label>
-                <label class="btn btn-default" ng-class="{true: '', false: 'active'}[layer.active === true]">
-                    <input type="radio" style="display:none" ng-model="layer.active" ng-value="false" ng-change="updateFilteringOnLayer(layer)"> No
+                <label class="btn btn-default" ng-class="{true: 'active', false: ''}[layer.active === true]">
+                    <input type="checkbox" style="display:none" ng-model="layer.active" ng-change="updateFilteringOnLayer(layer)">
+                    <span class="glyphicon glyphicon-filter"></span> Filter
                 </label>
             </div>
             <div class="clearfix"></div>
