--- a/app/css/style.less
+++ b/app/css/style.less
@@ -826,3 +826,61 @@ label{
     margin-bottom: 15px;
     font-weight: bold;
 }
+
+.neon-datetimepicker {
+    margin-top: 5px;
+
+    .btn-default {
+        font-size: 14px;
+        font-weight: bold;
+        color: @main-text-color;
+        background-color: @button-color;
+        border-style: solid;
+        border-width: 1px;
+        border-color: @button-border-color;
+        border-radius: 4px;
+        padding: 3px 6px;
+
+        &:hover {
+            color: @accent-bright;
+        }
+
+        .glyphicon {
+            margin-right: 2px;
+            top: 2px;
+        }
+
+        &.reset {
+            color: @error-color;
+
+            &:hover {
+                background-color: @error-color;
+                border-color: @error-dark-color;
+                color: @light-text-color;
+            }
+
+            &.disabled {
+                color: #ccc;
+                opacity: 0.5;
+            }
+        }
+    }
+
+    .dropdown-menu {
+        right: 0;
+        left: auto;
+        overflow-y: scroll;
+        padding: 10px;
+        /* Match the width of two datetimepickers plus margin/padding/scrollbar. */
+        width: 681px;
+
+        /* Match the width of the datetimepickers. */
+        label {
+            width: 320px;
+        }
+
+        .table-responsive {
+            display: inline-block;
+        }
+    }
+}
