--- a/app/partials/directives/timelineSelector.html
+++ b/app/partials/directives/timelineSelector.html
@@ -56,9 +56,32 @@
 <div class="clearfix"></div>
 
 <div class="header-container filter-container">
-    <div class="filter-reset pull-right" ng-class="{true: '', false: 'hidden'}[brush.length > 0]">
-        <span class="filter-label">Filter</span>
-        <span class="glyphicon glyphicon-remove" ng-click="clearBrush()"></span>
+    <div class="neon-datetimepicker dropdown pull-right">
+        <button class="btn btn-default dropdown-toggle" role="button" data-toggle="dropdown" data-target="#" href="#">
+            <span class="glyphicon glyphicon-calendar"></span> Filter <span class="caret"></span>
+        </button>
+        <button class="btn btn-default reset" ng-class="{true: '', false: 'disabled'}[brush.length > 0]" ng-click="clearBrush()">
+            <span class="glyphicon glyphicon-remove"></span> Reset
+        </button>
+        <ul class="dropdown-menu" role="menu">
+            <div>
+                <label>Start Date</label>
+                <label>End Date</label>
+            </div>
+            <!-- Create a datetimepicker for each granularity because you can't change the configuration dynamically. -->
+            <datetimepicker ng-show="(options.granularity === 'hour')" data-ng-model="filter.start" data-datetimepicker-config="{ startView: 'hour', minView: 'hour' }"/>
+            <datetimepicker ng-show="(options.granularity === 'day')" data-ng-model="filter.start" data-datetimepicker-config="{ startView: 'day', minView: 'day' }"/>
+            <datetimepicker ng-show="(options.granularity === 'month')" data-ng-model="filter.start" data-datetimepicker-config="{ startView: 'month', minView: 'month' }"/>
+            <datetimepicker ng-show="(options.granularity === 'year')" data-ng-model="filter.start" data-datetimepicker-config="{ startView: 'year', minView: 'year' }"/>
+            <datetimepicker ng-show="(options.granularity === 'hour')" data-ng-model="filter.end" data-datetimepicker-config="{ startView: 'hour', minView: 'hour' }"/>
+            <datetimepicker ng-show="(options.granularity === 'day')" data-ng-model="filter.end" data-datetimepicker-config="{ startView: 'day', minView: 'day' }"/>
+            <datetimepicker ng-show="(options.granularity === 'month')" data-ng-model="filter.end" data-datetimepicker-config="{ startView: 'month', minView: 'month' }"/>
+            <datetimepicker ng-show="(options.granularity === 'year')" data-ng-model="filter.end" data-datetimepicker-config="{ startView: 'year', minView: 'year' }"/>
+            <div class="pull-right">
+                <button class="btn btn-default" ng-click="handleDateTimePicked()">Save</button>
+                <button class="btn btn-default" ng-click="cancelDateTimePicked()">Cancel</button>
+            </div>
+        </ul>
     </div>
 
   <h4 class="pull-left"><span class="count text-primary" ng-bind="recordCount | number"></span> records 
