NEON-1549 Added datetimepickers to the Filter Builder for any field configured as the date field in the dataset's mappings.

--- a/app/css/directives/filterBuilder.less
+++ b/app/css/directives/filterBuilder.less
@@ -134,6 +134,7 @@
         padding: 0px 2px;
 
         button {
+            padding: 6px 0px;
             width: 100%;
         }
 
@@ -177,6 +178,14 @@
         label {
             margin: 0px 2px;
             height: 15px;
+        }
+    }
+
+    .neon-datetimepicker {
+        margin-top: 0px;
+
+        .dropdown-menu {
+            width: auto;
         }
     }
 }
