--- a/app/css/directives/timelineSelector.less
+++ b/app/css/directives/timelineSelector.less
@@ -18,7 +18,7 @@
     margin: 0px;
     padding: 10px;
     overflow-x: hidden;
-    overflow-y: scroll;
+    overflow-y: auto;
     height: @widget-height;
     width: @widget-width;
 
