NEON-1606 Added help button to navbar containing links for the user guide and video which are defined in the configuration file.  The user guide opens in a new tab and the video opens in a popup.  Also added a configuration option to show and autoplay the video popup when the dashboard first loads.

--- a/app/css/popupStyle.less
+++ b/app/css/popupStyle.less
@@ -94,11 +94,25 @@
     }
 
     .modal-dialog {
-        margin: 60px auto;
+        margin: 70px auto;
     }
 
     .modal-body {
         max-height: 410px;
         overflow-y: auto;
+    }
+}
+
+#videoModal {
+    .modal-dialog {
+        width: 90%;
+
+        .modal-body {
+            max-height: none;
+
+            video {
+                width: 100%;
+            }
+        }
     }
 }
