NEON-1322 Add toggling of focus graph

--- a/app/css/directives/timelineSelectorChart.less
+++ b/app/css/directives/timelineSelectorChart.less
@@ -17,7 +17,7 @@
     .timeline-selector-chart {
         height: 250px !important;
 
-        [class*='series-'] {
+        [class*='series-y'] {
             display: none;
         }
     }
