--- a/app/partials/directives/timelineSelector.html
+++ b/app/partials/directives/timelineSelector.html
@@ -50,6 +50,19 @@
             </div>
             <div class="clearfix"></div>
         </div>
+
+        <div class="form-group">
+            <label>Show Zoom</label>
+            <div class="btn-group">
+                <label class="btn btn-default" ng-class="{true: 'active', false: ''}[options.showZoom === true]">
+                    <input type="radio" style="display:none" ng-model="options.showZoom" ng-value="true"> Yes
+                </label>
+                <label class="btn btn-default" ng-class="{true: '', false: 'active'}[options.showZoom === true]">
+                    <input type="radio" style="display:none" ng-model="options.showZoom" ng-value="false"> No
+                </label>
+            </div>
+            <div class="clearfix"></div>
+        </div>
     </options-menu>
 </div>
 
@@ -76,7 +89,7 @@
 </div>
 
   <div class="collapsed" ng-class="{true: 'collapsed', false: ''}[options.collapsed]">
-    <div timeline-selector-chart timeline-data='data' timeline-brush='brush' collapsed='options.collapsed' extent-dirty='extentDirty' primary-series='options.primarySeries' granularity='options.granularity'></div>
+    <div timeline-selector-chart timeline-data='data' timeline-brush='brush' collapsed='options.collapsed' extent-dirty='extentDirty' primary-series='options.primarySeries' granularity='options.granularity' zoom='options.showZoom'></div>
   </div>
 
   <div class="text-center" ng-class="{true: '', false: 'hidden'}[options.granularity === 'hour' && !eventProbabilitiesDisplayed &&!options.collapsed]">
