NEON-1322 Add option to show focus on filter only, add tooltips to focus, change label to bigger font, rename variables, and add logging.

--- a/app/css/directives/timelineSelectorChart.less
+++ b/app/css/directives/timelineSelectorChart.less
@@ -107,6 +107,7 @@
             0px 2px 0 @text-shadow-color,
             0px -2px 0 @text-shadow-color;
         font-weight: bold;
+        font-size: 13px;
     }
 
     .tick {
