--- a/app/partials/directives/timelineSelector.html
+++ b/app/partials/directives/timelineSelector.html
@@ -52,13 +52,16 @@
         </div>
 
         <div class="form-group">
-            <label>Show Zoom</label>
+            <label>Show Focus</label>
             <div class="btn-group">
-                <label class="btn btn-default" ng-class="{true: 'active', false: ''}[options.showZoom === true]">
-                    <input type="radio" style="display:none" ng-model="options.showZoom" ng-value="true"> Yes
+                <label class="btn btn-default" ng-class="{true: 'active', false: ''}[options.showFocus === 'on_filter']">
+                    <input type="radio" style="display:none" ng-model="options.showFocus" value="on_filter"> On Filter
                 </label>
-                <label class="btn btn-default" ng-class="{true: '', false: 'active'}[options.showZoom === true]">
-                    <input type="radio" style="display:none" ng-model="options.showZoom" ng-value="false"> No
+                <label class="btn btn-default" ng-class="{true: 'active', false: ''}[options.showFocus === 'always']">
+                    <input type="radio" style="display:none" ng-model="options.showFocus" value="always"> Always
+                </label>
+                <label class="btn btn-default" ng-class="{true: 'active', false: ''}[options.showFocus === 'never']">
+                    <input type="radio" style="display:none" ng-model="options.showFocus" value="never"> Never
                 </label>
             </div>
             <div class="clearfix"></div>
@@ -89,7 +92,7 @@
 </div>
 
   <div class="collapsed" ng-class="{true: 'collapsed', false: ''}[options.collapsed]">
-    <div timeline-selector-chart timeline-data='data' timeline-brush='brush' collapsed='options.collapsed' extent-dirty='extentDirty' primary-series='options.primarySeries' granularity='options.granularity' zoom='options.showZoom'></div>
+    <div timeline-selector-chart timeline-data='data' timeline-brush='brush' collapsed='options.collapsed' extent-dirty='extentDirty' primary-series='options.primarySeries' granularity='options.granularity' show-focus='options.showFocus'></div>
   </div>
 
   <div class="text-center" ng-class="{true: '', false: 'hidden'}[options.granularity === 'hour' && !eventProbabilitiesDisplayed &&!options.collapsed]">
