NEON-1565 Add button in options menu to reset map viewing bounds

--- a/app/css/directives/map.less
+++ b/app/css/directives/map.less
@@ -94,6 +94,10 @@
                     }
                 }
             }
+
+            .reset-options {
+                margin-top: 30px;
+            }
         }
 
         &.legend-container {
