--- a/app/partials/directives/map.html
+++ b/app/partials/directives/map.html
@@ -14,6 +14,12 @@
             </div>
             <div class="clearfix"></div>
         </div>
+        <div class="form-group reset-options">
+            <button type="button" class="btn btn-default" title="Reset Map View" ng-click="setDefaultView()">
+              Reset View
+            </button>
+        </div>
+
     </options-menu>
 </div>
 
