NEON-1559 Hovering over a date in the Timeline and Line Chart now highlights the date with a yellow bar (in addition to the usual tooltip).

--- a/app/css/directives/linechart.less
+++ b/app/css/directives/linechart.less
@@ -51,21 +51,8 @@
         stroke-dasharray: 6px;
     }
 
-    .hover-line {
-        line {
-            stroke: @light-chart-axis-color;
-            fill: none;
-            stroke-width: 1px;
-        }
-
-        text {
-            font-weight: bold;
-            text-shadow: 0 2px 0 @text-shadow-color;
-        }
-
-        .hover-date {
-            fill: @chart-text-color;
-        }
+    .highlight {
+        fill: yellow;
     }
 
     .y {
