--- a/app/css/directives/timelineSelector.less
+++ b/app/css/directives/timelineSelector.less
@@ -78,6 +78,10 @@
     .timeseries-selector-form-group {
         margin: 10px 0px 0px 5px;
     }
+
+    .highlight {
+        fill: yellow;
+    }
 }
 
 .visualization-widget-mobile {
