--- a/app/css/directives/timelineSelector.less
+++ b/app/css/directives/timelineSelector.less
@@ -78,6 +78,15 @@
     .timeseries-selector-form-group {
         margin: 10px 0px 0px 5px;
     }
+
+    .neon-datetimepicker {
+        margin-top: 5px;
+
+        .dropdown-menu {
+            /* Match the width of two datetimepickers plus margin/padding/scrollbar. */
+            width: 682px;
+        }
+    }
 }
 
 .visualization-widget-mobile {
