Moved the Save/Cancel buttons in the Timeline filter to the top of the dropdown.  The Save button is now disabled if the chosen dates match the brush.  Only the Save and Cancel buttons will close the dropdown to ensure that the filter is saved or reset correctly.

--- a/app/css/directives/timelineSelector.less
+++ b/app/css/directives/timelineSelector.less
@@ -89,6 +89,21 @@
         .dropdown-menu {
             /* Match the width of two datetimepickers plus margin/padding/scrollbar. */
             width: 682px;
+
+            label {
+                &.start-date {
+                    width: 320px;
+                }
+
+                &.end-date {
+                    width: 185px;
+                }
+            }
+
+            button {
+                margin-left: 5px;
+                margin-bottom: 5px;
+            }
         }
     }
 }
