Adding descriptive labels to filter reset notifications in the Map, Timeline, and Line Charts to aid new users.

--- a/app/partials/directives/linechart.html
+++ b/app/partials/directives/linechart.html
@@ -46,7 +46,7 @@
 <div class="header-container filter-container">
     <div class="legend">
         <div class="filter-reset pull-right" ng-class="{true: '', false: 'hidden'}[brushExtent.length > 0]">
-            <span class="filter-label">Filter</span>
+            <span class="filter-label">Date Filter</span>
             <span class="glyphicon glyphicon-remove" ng-click="removeBrush()"></span>
         </div>
 
