--- a/app/partials/directives/map.html
+++ b/app/partials/directives/map.html
@@ -25,7 +25,7 @@
 
 <div class="header-container filter-container">
     <div class="filter-reset pull-right" ng-class="{true: '', false: 'hidden'}[showFilter]">
-        <span class="filter-label">Filter</span>
+        <span class="filter-label">Map Filter</span>
         <span class="glyphicon glyphicon-remove" ng-click="clearFilters(true)"></span>
     </div>
 </div>
