--- a/app/partials/directives/timelineSelector.html
+++ b/app/partials/directives/timelineSelector.html
@@ -74,7 +74,7 @@
 <div class="header-container filter-container">
     <div class="neon-datetimepicker dropdown pull-right">
         <button class="btn btn-default dropdown-toggle" role="button" data-toggle="dropdown" data-target="#" href="#">
-            <span class="glyphicon glyphicon-calendar"></span> Filter <span class="caret"></span>
+            <span class="glyphicon glyphicon-calendar"></span> Date Filter <span class="caret"></span>
         </button>
         <button class="btn btn-default reset" ng-class="{true: '', false: 'disabled'}[brush.length > 0]" ng-click="clearBrush()">
             <span class="glyphicon glyphicon-remove"></span> Reset
