Fixing a minor bug with the margin of the legend items in the Line Chart.

--- a/app/css/directives/linechart.less
+++ b/app/css/directives/linechart.less
@@ -105,8 +105,8 @@
         .legend-item {
             margin-top: 5px;
 
-            /* Add extra margin to the top of the legend (the first item) to mimic the styling of the Bar Chart. */
-            &:first-child {
+            /* Add extra margin to the top of the legend (the first item after the filter-reset) to mimic the styling of the Bar Chart. */
+            &:nth-child(2) {
                 margin-top: 10px;
             }
         }
